[workspace]
resolver = "3"
default-members = ["shroudb-forge-server"]
members = [
    "shroudb-forge-core",
    "shroudb-forge-engine",
    "shroudb-forge-protocol",
    "shroudb-forge-server",
    "shroudb-forge-client",
    "shroudb-forge-cli",
]

[workspace.package]
version = "1.5.3"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
publish = ["shroudb"]

[workspace.dependencies]
# Internal crates
shroudb-forge-core = { path = "shroudb-forge-core", version = "1.5.1", registry = "shroudb" }
shroudb-forge-engine = { path = "shroudb-forge-engine", version = "1.5.1", registry = "shroudb" }
shroudb-forge-protocol = { path = "shroudb-forge-protocol", version = "1.5.1", registry = "shroudb" }
shroudb-forge-client = { path = "shroudb-forge-client", version = "1.5.1", registry = "shroudb" }

# ShrouDB commons (shroudb registry)
shroudb-store = { version = "0.1.2", registry = "shroudb" }
shroudb-storage = { version = "0.2.13", registry = "shroudb" }
shroudb-acl = { version = "0.1.4", registry = "shroudb" }
shroudb-crypto = { version = "0.1.1", registry = "shroudb" }
shroudb-chronicle-core = { version = "1.2.2", registry = "shroudb" }
shroudb-protocol-wire = { version = "0.1.0", registry = "shroudb" }
shroudb-server-tcp = { version = "0.1.0", registry = "shroudb" }
shroudb-server-bootstrap = { version = "0.1.0", registry = "shroudb" }
shroudb-client-common = { version = "0.1.0", registry = "shroudb" }
shroudb-courier-core = { version = "1.3.4", registry = "shroudb" }

# Crypto / X.509
ring = "0.17"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
pem = "3"
rustls-pki-types = { version = "1", features = ["std"] }

# HTTP
axum = "0.8"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Security
zeroize = { version = "1", features = ["derive"] }

# Utilities
anyhow = "1"
thiserror = "2"
hex = "0.4"
base64 = "0.22"
dashmap = "6"
libc = "0.2"
