[package]
name = "shroudb-forge-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shroudb-forge-core = { workspace = true }
shroudb-store = { workspace = true }
shroudb-crypto = { workspace = true }
shroudb-acl = { workspace = true }
ring = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
shroudb-storage = { workspace = true, features = ["testing"] }
