[package]
name = "shroudb-forge-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "shroudb-forge"
path = "src/main.rs"

[dependencies]
shroudb-forge-core = { workspace = true }
shroudb-forge-engine = { workspace = true }
shroudb-forge-protocol = { workspace = true }
shroudb-acl = { workspace = true }
shroudb-store = { workspace = true }
shroudb-storage = { workspace = true }
shroudb-client = { workspace = true }
shroudb-protocol-wire = { workspace = true }
shroudb-server-tcp = { workspace = true }
shroudb-server-bootstrap = { workspace = true }
shroudb-engine-bootstrap = { workspace = true }
shroudb-keep-engine = { workspace = true }
shroudb-keep-core = { workspace = true }
shroudb-crypto = { workspace = true }
tokio-rustls = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
shroudb-forge-client = { workspace = true }
shroudb-storage = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
